; ModuleID = '/home/carl/AnghaBench/reactos/drivers/network/afd/afd/extr_tdiconn.c_TaLengthOfTransportAddressByType.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/network/afd/afd/extr_tdiconn.c_TaLengthOfTransportAddressByType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MID_TRACE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"AddrLen %x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @TaLengthOfTransportAddressByType(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = call i64 @TdiAddressSizeFromType(i64 %5)
  store i64 %6, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i64 0, i64* %2, align 8
  br label %18

10:                                               ; preds = %1
  %11 = load i64, i64* %4, align 8
  %12 = add i64 %11, 12
  store i64 %12, i64* %4, align 8
  %13 = load i32, i32* @MID_TRACE, align 4
  %14 = load i64, i64* %4, align 8
  %15 = inttoptr i64 %14 to i8*
  %16 = call i32 @AFD_DbgPrint(i32 %13, i8* %15)
  %17 = load i64, i64* %4, align 8
  store i64 %17, i64* %2, align 8
  br label %18

18:                                               ; preds = %10, %9
  %19 = load i64, i64* %2, align 8
  ret i64 %19
}

declare dso_local i64 @TdiAddressSizeFromType(i64) #1

declare dso_local i32 @AFD_DbgPrint(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
